HHH-5400 - Blob persistence fails with Hibernate 3.6.0-SNAPSHOT, works with 3.5.3-Final
git-svn-id: https://svn.jboss.org/repos/hibernate/core/trunk@20070 1b8cb986-b30d-0410-93ca-fae66ebed9b2